...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.AccountAddActivity">

    <EditText
        android:id="@+id/account_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:inputType="number"
        android:hint="number"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/account_name"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="73dp"
        android:layout_height="49dp"
...
        android:hint="Name"

        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_confirm_add_account"
        android:layout_width="407dp"
        android:layout_height="57dp"
        android:layout_marginBottom="404dp"
        android:backgroundTint="@color/black"
        android:text="保存"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="3dp" />

...
