...
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_fg_account"
            android:layout_width="385dp"
            android:layout_height="442dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout"
            app:layout_constraintVertical_bias="0.48"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button_add_account"
            android:layout_width="143dp"
            android:layout_height="57dp"
            android:backgroundTint="@color/black"
            android:text="添加账户"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView_fg_account"
...
