<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_edit"
        android:title="修改" />
    <item
        android:id="@+id/menu_delete"
        android:title="删除" />
</menu>